src/FinancialForce Accounting/objects/WorkerLog__c.object
<CustomObject>
    <customHelpPage>codahelpworkerlog</customHelpPage>
    <fields>
        <fullName>IsLastRun__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the object represents the most recent batch run.</description>
        <label>Is Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PurchaseCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Credit Note</label>
        <referenceTo>codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice</label>
        <referenceTo>codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>codaCreditNote__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesInvoiceLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice Line Item</label>
        <referenceTo>codaInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkerLogGroup__c</fullName>
        <label>Worker Log Group</label>
        <referenceTo>WorkerLogGroup__c</referenceTo>
        <relationshipLabel>Worker Logs</relationshipLabel>
        <relationshipName>WorkerLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Worker Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SalesInvoice__c</columns>
        <columns>SalesCreditNote__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Worker Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>